cambios perro destacado

--- a/Adopcion/index.html
+++ b/Adopcion/index.html
@@ -93,7 +93,7 @@
             </div>
             <div>
                 <img src="img/perro destacados4.jpg" alt="Destacados 4">
-                <h3>lorem, ipsum dolor.</h3>
+                <h3>Perros destacados.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia earum officia hic voluptate, perspiciatis tempore repellat delectus cumque officiis impedit?</p>
                 <a href="#">Adoptar <i class="fas fa-angle-double-right"></i></a>
             </div>
