--- a/Adopcion/index.html
+++ b/Adopcion/index.html
@@ -87,7 +87,7 @@
             </div>
             <div>
                 <img src="img/perro destacados3.jpg" alt="Destacados 3">
-                <h3>lorem, ipsum dolor.</h3>
+                <h3>Labrador</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia earum officia hic voluptate, perspiciatis tempore repellat delectus cumque officiis impedit?</p>
                 <a href="#">Adoptar <i class="fas fa-angle-double-right"></i></a>
             </div>
